--- a/figs/scenario_1_ap_4_rooms.tex
+++ b/figs/scenario_1_ap_4_rooms.tex
@@ -32,7 +32,7 @@
 \begin{tikzpicture}[scale=0.4,transform shape]
   % We explicitly set the bounding box here so that the text nodes outside
   % the grid do not extend the bounding box.
-  \path[use as bounding box] (-6, -6) rectangle (6, 6);
+  % \path[use as bounding box] (-6, -6) rectangle (6, 6);
 
   \draw[fill=gray] (-6, -6) grid (6, 6);
 
