--- a/figs/discretized_room.tex
+++ b/figs/discretized_room.tex
@@ -29,10 +29,12 @@
 
 \tikzset{AP/.style={draw, circle, fill=red, minimum size=8}}
 
-\begin{tikzpicture}[scale=0.6]
+\begin{tikzpicture}[scale=<<scale>>,transform shape]
   
 
-  \begin{axis}[axis lines=none, width=210mm,height=210mm]
+  \begin{axis}[axis lines=none, 
+    width=16cm,
+    height=16cm]
     \addplot table[col sep=comma,x index=0, y index=1, only marks] {discretized_room.csv};
     \draw (axis cs: -1.0,-1.0) rectangle (axis cs:1,1);
     \draw (axis cs: 0,0) node[AP] {};
