--- a/figs/scenario_1_ap_1_room.tex
+++ b/figs/scenario_1_ap_1_room.tex
@@ -28,7 +28,7 @@
 
 \tikzset{AP/.style={draw, circle, fill=red, minimum size=8}}
 
-\begin{tikzpicture}[scale=0.4,transform shape]
+\begin{tikzpicture}[scale=<<scale>>,transform shape]
   % We explicitly set the bounding box here so that the text nodes outside
   % the grid do not extend the bounding box.
   % \path[use as bounding box] (-6, -6) rectangle (6, 6);
